
History
=======

0.1.2
-----

* Fixed install of 'ia32-sun-java6-bin' on 64-bit systems
* Added install the required Java dependencies
* Added TODO

0.1.1
-----

* Updated to use dynamic version detection throughout
* Fixed package installation when upgrading
* Minor documentation updates

0.1.0
-----

* Initial release